--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <div class="logo">
-        <h1>SeaBattle</h1>
+        <h1>Sea Battle</h1>
         <h2>Play the ultimate naval strategy game</h2>
     </div>
 </header>
@@ -21,7 +21,8 @@
             <button class="startGameBtn">Start Game</button>
         </section>
         <section class="battleFieldContainer">
-
+            <div class="playerField battleField"></div>
+            <div class="enemyField battleField"></div>
         </section>
         <section class="howToPlayContainer">
             <div class="howToPlay">
