add images ship & BG

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Sea Battle — Морський бій</title>
     <link rel="stylesheet" href="./styles/css/style.css">
 </head>
 <body>
+<img  class="backGroundMain" src="./img/BG-v3.png" alt="bg">
 <header>
     <div class="logo">
         <h1>Sea Battle</h1>
@@ -16,6 +17,7 @@
     </div>
 </header>
 <main>
+
     <div class="wrapper">
         <section class="gameStartContainer">
             <button class="startGameBtn">Start Game</button>
@@ -27,11 +29,21 @@
         <section class="howToPlayContainer">
             <div class="howToPlay">
                 <h3>How to Play</h3>
-
+                <div class="color-palette">
+                    <div class="color-block color-1">#153d3c<br>темно-бірюзовий</div>
+                    <div class="color-block color-2">#1b6c7e<br>морський синій</div>
+                    <div class="color-block color-3">#2f8e8b<br>бірюзово-синій</div>
+                    <div class="color-block color-4">#0b1a1a<br>майже чорний</div>
+                    <div class="color-block color-5">#3a5557<br>сіро-синий</div>
+                    <div class="color-block color-6">#3a5557<br>Основний фоновий</div>
+                    <div class="color-block color-7">#3a5557<br>Золотий</div>
+                </div>
             </div>
         </section>
     </div>
 </main>
-<footer></footer>
+<footer>
+    <p>&copy; 2025 Sea Battle. All rights reserved.</p>
+</footer>
 </body>
 </html>
