--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/css/style.css">
 </head>
 <body>
-<img class="backGroundMain" src="./img/BG-v3.png" alt="bg">
+<img class="backGroundMain" src="./assets/Img/BG-v3.png" alt="bg">
 <header>
     <div class="logo">
         <h1>Sea Battle</h1>
@@ -19,69 +19,65 @@
 <main>
 
     <div class="wrapper">
-        <section class="playingFieldContainer">
-            <div class="shipsContainer">
-                <h3>Available Ships</h3>
-
-                <img src="./img/WarShips/5X_Ship.png" alt="Ship size 5"
-                     class="ship-image ship-size-5"
-                     draggable="true"
-                     data-size="5"
-                     data-orientation="horizontal">
-
-                <img src="./img/WarShips/4X_Ship.png" alt="Ship size 4"
-                     class="ship-image ship-size-4"
-                     draggable="true"
-                     data-size="4"
-                     data-orientation="horizontal">
-
-                <img src="./img/WarShips/3X_Ship.png" alt="Ship size 3"
-                     class="ship-image ship-size-3"
-                     draggable="true"
-                     data-size="3"
-                     data-orientation="horizontal">
-
-                <img src="./img/WarShips/2X_Ship.png" alt="Ship size 2"
-                     class="ship-image ship-size-2"
-                     draggable="true"
-                     data-size="2"
-                     data-orientation="horizontal">
-
-                <img src="./img/WarShips/1X_Ship.png" alt="Ship size 1"
-                     class="ship-image ship-size-1"
-                     draggable="true"
-                     data-size="1"
-                     data-orientation="horizontal">
+        <div class="shipsContainer ">
+            <div class="ships-palette">
+                <div id="ship_4_1" class="ship" draggable="true" data-length="4"><img
+                        src="./assets/Img/ships/4X_Ship.png" alt="4-ship"></div>
+                <div id="ship_3_1" class="ship" draggable="true" data-length="3"><img
+                        src="./assets/Img/ships/3X_Ship.png" alt="3-ship"></div>
+                <div id="ship_3_2" class="ship" draggable="true" data-length="3"><img
+                        src="./assets/Img/ships/3X_Ship.png" alt="3-ship"></div>
+                <div id="ship_2_1" class="ship" draggable="true" data-length="2"><img
+                        src="./assets/Img/ships/2X_Ship.png" alt="2-ship"></div>
+                <div id="ship_2_2" class="ship" draggable="true" data-length="2"><img
+                        src="./assets/Img/ships/2X_Ship.png" alt="2-ship"></div>
+                <div id="ship_2_3" class="ship" draggable="true" data-length="2"><img
+                        src="./assets/Img/ships/2X_Ship.png" alt="2-ship"></div>
+                <div id="ship_1_1" class="ship" draggable="true" data-length="1"><img
+                        src="./assets/Img/ships/1X_Ship.png" alt="1-ship"></div>
+                <div id="ship_1_2" class="ship" draggable="true" data-length="1"><img
+                        src="./assets/Img/ships/1X_Ship.png" alt="1-ship"></div>
+                <div id="ship_1_3" class="ship" draggable="true" data-length="1"><img
+                        src="./assets/Img/ships/1X_Ship.png" alt="1-ship"></div>
+                <div id="ship_1_4" class="ship" draggable="true" data-length="1"><img
+                        src="./assets/Img/ships/1X_Ship.png" alt="1-ship"></div>
             </div>
-            <div class="playerGrid battleField" id="playerGrid">
+        </div>
 
-            </div>
-            <div class="enemyGrid battleField" id="enemyGrid">
+        <div class="grid-wrapper">
+            <div id="grid-container" class="grid-container"></div>
+        </div>
 
-            </div>
-        </section>
-        <section class="gameStartContainer">
-            <button class="startGameBtn">Start Game</button>
-        </section>
-        <section class="howToPlayContainer">
-            <div class="howToPlay">
-                <h3>How to Play</h3>
-                <div class="color-palette">
-                    <div class="color-block color-1">#153d3c<br>темно-бірюзовий</div>
-                    <div class="color-block color-2">#1b6c7e<br>морський синій</div>
-                    <div class="color-block color-3">#2f8e8b<br>бірюзово-синій</div>
-                    <div class="color-block color-4">#0b1a1a<br>майже чорний</div>
-                    <div class="color-block color-5">#3a5557<br>сіро-синий</div>
-                    <div class="color-block color-6">#3a5557<br>Основний фоновий</div>
-                    <div class="color-block color-7">#3a5557<br>Золотий</div>
-                </div>
-            </div>
-        </section>
+        <div class="enemy-wrapper">
+            <div id="enemy-grid" class="grid-container"></div>
+        </div>
+        <div class="navigation">
+            <button id="start-button" disabled>StartGame</button>
+            <button id="auto-place-button">Авто</button>
+        </div>
+
+        <!--        <section class="howToPlayContainer">-->
+        <!--            <div class="howToPlay">-->
+        <!--                <h3>How to Play</h3>-->
+        <!--                <div class="color-palette">-->
+        <!--                    <div class="color-block color-1">#153d3c<br>темно-бірюзовий</div>-->
+        <!--                    <div class="color-block color-2">#1b6c7e<br>морський синій</div>-->
+        <!--                    <div class="color-block color-3">#2f8e8b<br>бірюзово-синій</div>-->
+        <!--                    <div class="color-block color-4">#0b1a1a<br>майже чорний</div>-->
+        <!--                    <div class="color-block color-5">#3a5557<br>сіро-синий</div>-->
+        <!--                    <div class="color-block color-6">#3a5557<br>Основний фоновий</div>-->
+        <!--                    <div class="color-block color-7">#3a5557<br>Золотий</div>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </section>-->
+
+
     </div>
+
 </main>
 <footer>
     <p>&copy; 2025 Sea Battle. All rights reserved.</p>
 </footer>
-<script src="./script.js"></script>
+<script type="module" src="js/main.js"></script>
 </body>
 </html>
