1 patch in style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/css/style.css">
 </head>
 <body>
-<img class="backGroundMain" src="./assets/Img/BG-v3.png" alt="bg">
+<img class="backGroundMain" src="./assets/Img/BG-v3-min.png" alt="bg">
 <header>
     <div class="logo">
         <h1>Sea Battle</h1>
@@ -52,25 +52,10 @@
             <div id="enemy-grid" class="grid-container"></div>
         </div>
         <div class="navigation">
-            <button id="start-button" disabled>StartGame</button>
-            <button id="auto-place-button">Авто</button>
+            <button id="start-button" class="start-button" disabled>StartGame</button> <!--disabled-->
+
+            <button id="auto-place-button" class="auto-place-button">Auto place</button>
         </div>
-
-        <!--        <section class="howToPlayContainer">-->
-        <!--            <div class="howToPlay">-->
-        <!--                <h3>How to Play</h3>-->
-        <!--                <div class="color-palette">-->
-        <!--                    <div class="color-block color-1">#153d3c<br>темно-бірюзовий</div>-->
-        <!--                    <div class="color-block color-2">#1b6c7e<br>морський синій</div>-->
-        <!--                    <div class="color-block color-3">#2f8e8b<br>бірюзово-синій</div>-->
-        <!--                    <div class="color-block color-4">#0b1a1a<br>майже чорний</div>-->
-        <!--                    <div class="color-block color-5">#3a5557<br>сіро-синий</div>-->
-        <!--                    <div class="color-block color-6">#3a5557<br>Основний фоновий</div>-->
-        <!--                    <div class="color-block color-7">#3a5557<br>Золотий</div>-->
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--        </section>-->
-
 
     </div>
 
