--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
     </div>
 </header>
 <main>
+    <div id="gameModal" class="modal">
+        <div class="modal-content">
+            <span id="closeModal" class="close">&times;</span>
+            <h2 id="modalText">You Win!</h2>
+        </div>
+    </div>
 
     <div class="wrapper">
+
         <div class="shipsContainer ">
             <div class="ships-palette">
                 <div class="tip">Click to rotate <img src="./assets/Img/Icon/RBM.png" alt="rbm"></div>
@@ -45,14 +52,21 @@
             </div>
         </div>
 
-        <div class="grid-wrapper">
-            <div id="grid-container" class="grid-container"></div>
+            <div id="grid-container" class="grid-container player-grid"></div>
 
-            <div id="enemy-grid" class="grid-container enemy-grid"></div>
+            <div id="enemy-grid" class="grid-container enemy-grid "></div>
 
             <button id="auto-place-button" class="auto-place-button">Auto place</button>
-
+        
+        <div class="aiContainer">
+            <span> AI </span>
+            <label class="ai_switch">
+                <input type="checkbox" id="aiSwitch">
+                <span class="slider"></span>
+            </label>
         </div>
+        
+
         <div class="navigation">
             <button id="start-button" class="start-button" disabled>StartGame</button> <!--disabled-->
 
